--- a/app/src/main/res/layout/new_emaisha_pay_home.xml
+++ b/app/src/main/res/layout/new_emaisha_pay_home.xml
@@ -67,16 +67,14 @@
                 android:alpha="0.6"/>
             <ImageView
                 android:id="@+id/down_arrow"
-                android:layout_width="wrap_content"
-                android:layout_height="5dp"
-                android:layout_marginStart="2dp"
-                android:layout_marginTop="4dp"
+                android:layout_width="15dp"
+                android:layout_height="15dp"
                 android:layout_toEndOf="@id/username_details"
                 android:layout_below="@id/username"
-                android:src="@drawable/drop_down"
-                android:drawablePadding="4dp"
-                android:alpha="0.6"
-                app:tint="@color/colorPrimary"/>
+                android:src="@drawable/ic_right_arrow_green"
+                android:rotation="90"
+                android:layout_marginTop="-2dp"
+                android:alpha="0.6"/>
 
         </RelativeLayout>
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -338,7 +336,7 @@
             android:id="@+id/label_transact"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/layout_money_transfers"
+            android:layout_below="@id/layout_balance"
             android:layout_marginStart="20dp"
             android:layout_marginTop="20dp"
             android:text="Transact with Customers"
@@ -599,7 +597,7 @@
             android:id="@+id/layout_balance_label_visibility"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/layout_transact_with_customers"
+            android:layout_below="@id/layout_money_transfers"
             android:layout_marginTop="20dp"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="25dp">
@@ -761,7 +759,7 @@
             android:id="@+id/layout_recent_transactions"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/layout_balance"
+            android:layout_below="@id/layout_transact_with_customers"
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
             android:layout_marginStart="20dp"
