--- a/app/src/main/res/menu/bottom_nav_agent_merchant_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_agent_merchant_menu.xml
@@ -4,34 +4,34 @@
     <item
         android:id="@+id/walletHomeFragment"
         android:enabled="true"
-        android:icon="@drawable/home"
+        android:icon="@drawable/ic_bn_home"
         android:title="HOME"
         android:titleCondensed="Home"
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/walletShopFragment"
         android:enabled="true"
-        android:icon="@drawable/ic_shop"
+        android:icon="@drawable/ic_bn_store"
         android:title="SHOP"
         app:showAsAction="ifRoom"/>
     <item
         android:id="@+id/walletAcceptPaymentFragment"
         android:enabled="true"
-        android:icon="@drawable/ic_accept"
+        android:icon="@drawable/ic_payments_black_24dp"
         android:title="ACCEPT PAYMENT"
         app:showAsAction="ifRoom"/>
 
     <item
         android:id="@+id/walletSettlementFragment"
         android:enabled="true"
-        android:icon="@drawable/transaction"
+        android:icon="@drawable/ic_pay24"
         android:title="SETTLEMENT"
         app:showAsAction="ifRoom"/>
 
     <item
         android:id="@+id/walletAccountFragment_agent"
         android:enabled="true"
-        android:icon="@drawable/user"
+        android:icon="@drawable/ic_bn_account_circle"
         android:title="ACCOUNT"
         app:showAsAction="ifRoom" />
 </menu>
