--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -27,7 +27,7 @@
     <item
         android:id="@+id/walletCardsFragment"
         android:enabled="true"
-        android:icon="@drawable/ic_bn_cards"
+        android:icon="@drawable/ic_group_9762"
         android:title="CARDS"
         app:showAsAction="ifRoom"/>
 
